syntax = "proto3";

import "lte/gateway/c/oai/protos/common_types.proto";
import "lte/gateway/c/oai/protos/nas_state.proto";

package magma.lte;

// sgs_context_t
message SgsContext {
  // TODO
}

/*****************************************************************/
/*                     messages for MME                          */
/*****************************************************************/
// ue_mm_context_t
message UeContext {
  uint64 imsi = 1;
  uint32 imsi_len = 2;
  uint32 member_present_mask = 3;
  bytes imeisv = 4; // imeisv_t
  string msisdn = 5;

  uint32 imsi_auth = 6;
  uint32 rel_cause = 7; //enum s1cause
  uint32 mm_state = 8; // mm_state_t
  uint32 ecm_state = 9; // ecm_state_t

  EmmContext emm_context = 10;
  uint32 sctp_assoc_id_key = 11;

  uint32 enb_ue_s1ap_id = 12;
  uint64 enb_s1ap_id_key = 13;
  uint32 mme_ue_s1ap_id = 14;

  Tai serving_cell_tai = 20;
  TaiList tai_list = 21;
  bytes tai_last_tau = 22; // tai_t is 5 bytes long
  Ecgi e_utran_cgi = 23;
  uint64 cell_age = 24;

  ApnConfigProfile apn_config = 31;

  SgsContext sgs_context = 41;
  Timer mobile_reachability_timer = 200;
  Timer implicit_detach_timer = 201;
  Timer initial_context_setup_rsp_timer =202;
  Timer ue_context_modification_timer = 203;
  Timer paging_response_timer = 204;
}

// mme_ue_context_t
message MmeUeContext {
  uint32 nb_ue_managed = 1;
  uint32 nb_ue_idle = 2;
  uint32 nb_bearers_managed = 3;

  map<uint64, uint64> imsi_ue_id_htbl = 4;  // imsi -> mme_ue_id
  map<uint64, uint64> tun11_ue_id_htbl = 5; // tun_id -> mme_ue_id
  map<uint64, UeContext> mme_ue_id_ue_ctxt_htbl = 6; // mme_ue_id -> ue_context
  map<uint64, uint64> enb_ue_id_ue_id_htbl = 7; // enb_ue_id -> mme_ue_id
  map<string, uint64> guti_ue_id_htbl = 8; // guti -> mme_ue_id

  uint32 nb_ue_since_last_stat = 9; //TODO: remove
  uint32 nb_bearers_since_last_stat = 10; //TODO: remove
}

// mme_app_desc_t
message MmeNasState {
  MmeUeContext mme_ue_contexts = 1; // mme_ue_context_t
  uint32 nb_enb_connected = 2;
  uint32 nb_ue_attached = 3;
  uint32 nb_ue_connected = 4;
  uint32 nb_default_eps_bearers = 5;
  uint32 nb_s1u_bearers = 6;
  uint64 statistic_timer_id = 7;
}
